--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     h2 {font-family: 'Roboto Mono', monospace;
         margin-right: 300px;
         margin-left: 300px;
-        text-align: center;}
+        text-align: center;
+        font-weight: bold;
+        text-decoration: underline;
+        }
     h5 {font-family: 'Roboto Mono', monospace;
         margin-right: 300px;
-        margin-left: 300px;}
+        margin-left: 300px;
+      }
     p {font-family: 'Roboto Mono', monospace;
        margin-right: 300px;
        margin-left: 300px;
-       color: brown;}
+       color: brown;
+      }
 
   </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,38 +37,40 @@
       <h5>
         <ul>
           <li>s3897401@student.rmit.edu.au</li>
-          <li> <a href="https://www.instagram.com/col.ville/" target="_blank" rel="noopener noreferrer"> Instagram </a> </li>
+          <li>
+            <a href="https://www.instagram.com/col.ville/" target="_blank" rel="noopener noreferrer">
+               Instagram
+            </a>
+          </li>
+          <li>
+            <a href="https://www.grailed.com/lachiecolville">
+              Grailed
+            </a>
+          </li>
         </ul>
       </h5>
-    <h2>
-      <b>
-        <u>Personal Information
-        </u>
-      </b>
-    </h2>
-    <p>
-      Hey! I’m Lachie, a first-year student at the Royal Melbourne Institute of Technology studying a bachelor’s degree in information technology. While I am technically a first year, I had completed the first semester of a Computer Science degree at RMIT in 2021, however due to the move to online classes in second semester and personally not enjoying the course at that point I decided to take the second semester off and start fresh in IT in 2022.
-    </p>
-    <p>
-      I like to think of myself as quite a unique individual, however a fair amount of the hobbies that I have could be considered quite normal. In my free time I am an avid gamer, as well as a fan of both Anime and Manga. As far as gaming goes, I love playing first-person shooters primarily having played Overwatch for the better part of 5 years, before moving to playing Valorant following building a gaming PC in the middle of 2021 (don’t ask my bank account how it’s doing, it still hasn’t recovered). With anime and manga, the primary genre I am a fan is shōnen. My top three anime/manga that I’ve seen or read would be <a href="https://en.wikipedia.org/wiki/Akira_(franchise)" target="_blank" rel="noopener noreferrer">Akira</a>, <a href="https://en.wikipedia.org/wiki/JoJo%27s_Bizarre_Adventure" target="_blank" rel="noopener noreferrer">JoJo’s Bizarre Adventure</a>, and <a href="https://en.wikipedia.org/wiki/Dr._Stone" target="_blank" rel="noopener noreferrer">Dr Stone</a>. I have also recently started reading again and am currently progressing through the works of the Japanese surrealist author <a href="https://en.wikipedia.org/wiki/Haruki_Murakami" target="_blank" rel="noopener noreferrer">Haruki Murakami</a>, with his novel ‘Norwegian Wood’ having quickly become my favourite book.
-    </p>
+      <h2>
+        Personal Information
+      </h2>
+      <p>
+        Hey! I’m Lachie, a first-year student at the Royal Melbourne Institute of Technology studying a bachelor’s degree in information technology. While I am technically a first year, I had completed the first semester of a Computer Science degree at RMIT in 2021, however due to the move to online classes in second semester and personally not enjoying the course at that point I decided to take the second semester off and start fresh in IT in 2022.
+      </p>
+      <p>
+        I like to think of myself as quite a unique individual, however a fair amount of the hobbies that I have could be considered quite normal. In my free time I am an avid gamer, as well as a fan of both Anime and Manga. As far as gaming goes, I love playing first-person shooters primarily having played Overwatch for the better part of 5 years, before moving to playing Valorant following building a gaming PC in the middle of 2021 (don’t ask my bank account how it’s doing, it still hasn’t recovered). With anime and manga, the primary genre I am a fan is shōnen. My top three anime/manga that I’ve seen or read would be <a href="https://en.wikipedia.org/wiki/Akira_(franchise)" target="_blank" rel="noopener noreferrer">Akira</a>, <a href="https://en.wikipedia.org/wiki/JoJo%27s_Bizarre_Adventure" target="_blank" rel="noopener noreferrer">JoJo’s Bizarre Adventure</a>, and <a href="https://en.wikipedia.org/wiki/Dr._Stone" target="_blank" rel="noopener noreferrer">Dr Stone</a>. I have also recently started reading again and am currently progressing through the works of the Japanese surrealist author <a href="https://en.wikipedia.org/wiki/Haruki_Murakami" target="_blank" rel="noopener noreferrer">Haruki Murakami</a>, with his novel ‘Norwegian Wood’ having quickly become my favourite book.
+      </p>
 
-    <h2>
-      <b>
-        <u>
-          Interest in IT
-        </u>
-      </b>
-    </h2>
-    <p>
-      My initial interest in IT started when I was around 10 and I was playing Minecraft. My dad had seen me using different commands in one of my Minecraft worlds I had at the time and said that it reminded him of programming which piqued my interest in learning how to code to one day be a games developer. This hope to one day become a games developer further blossomed when I fell quite ill across late 2013 until early 2015 when I was dealing with an undiagnosed auto-immune disease called Achalasia, which made it quite difficult to eat as it effected the muscles in my throat and oesophageal sphincter. Due to this I had to give up the many sports I played and with my newfound time I developed a deeper love of gaming, further fuelling my dream of being a games developer. However, as I looked further into the games industry, I discovered just how hard it would be to break into the industry and thus decided to take a slight shift and look more towards doing something else in the IT industry which is where I am at now.
-    </p>
-    <p>
-      When looking into getting into IT with tertiary education, the three universities I was primarily looking at were RMIT, Swinburne, and Monash. The main reason I was looking at these three unis was because of the praise and general high standards that these three universities had showcased to me during open days as well as during online research. However, when it came to prioritising one university over another, I chose to have Monash and RMIT stand over Swinburne due to the former two having greater global recognition, which I consider quite important with having a globe spanning career. Further deciding between Monash and RMIT was due to personal reasons rather than academic. With Monash having its main campus located in Clayton it would be quite inconvenient to get to when compared to RMIT. Furthermore, with RMIT located in the city it creates an atmosphere of professionalism I quite like, with the commute into the city almost emulating a commute into a working job. Additionally, the added amenities in the city, whether that be bars, shops, restaurants, or other entertainment venues are all an added bonus when studying at RMIT.
-    </p>
-    <p>
-      During my studies at RMIT, I would love (and expect) to learn a deep understanding of programming and the creation process of computer systems. While I’m not fussed about what languages of code I learn while undertaking my degree, I’m personally more interested in learning the processes of learning new languages in quickly and efficiently which I personally think will be an invaluable skill when moving into the professional IT landscape.  
-    </p>
+      <h2>
+        Interest in IT
+      </h2>
+      <p>
+        My initial interest in IT started when I was around 10 and I was playing Minecraft. My dad had seen me using different commands in one of my Minecraft worlds I had at the time and said that it reminded him of programming which piqued my interest in learning how to code to one day be a games developer. This hope to one day become a games developer further blossomed when I fell quite ill across late 2013 until early 2015 when I was dealing with an undiagnosed auto-immune disease called Achalasia, which made it quite difficult to eat as it effected the muscles in my throat and oesophageal sphincter. Due to this I had to give up the many sports I played and with my newfound time I developed a deeper love of gaming, further fuelling my dream of being a games developer. However, as I looked further into the games industry, I discovered just how hard it would be to break into the industry and thus decided to take a slight shift and look more towards doing something else in the IT industry which is where I am at now.
+      </p>
+      <p>
+        When looking into getting into IT with tertiary education, the three universities I was primarily looking at were RMIT, Swinburne, and Monash. The main reason I was looking at these three unis was because of the praise and general high standards that these three universities had showcased to me during open days as well as during online research. However, when it came to prioritising one university over another, I chose to have Monash and RMIT stand over Swinburne due to the former two having greater global recognition, which I consider quite important with having a globe spanning career. Further deciding between Monash and RMIT was due to personal reasons rather than academic. With Monash having its main campus located in Clayton it would be quite inconvenient to get to when compared to RMIT. Furthermore, with RMIT located in the city it creates an atmosphere of professionalism I quite like, with the commute into the city almost emulating a commute into a working job. Additionally, the added amenities in the city, whether that be bars, shops, restaurants, or other entertainment venues are all an added bonus when studying at RMIT.
+      </p>
+      <p>
+        During my studies at RMIT, I would love (and expect) to learn a deep understanding of programming and the creation process of computer systems. While I’m not fussed about what languages of code I learn while undertaking my degree, I’m personally more interested in learning the processes of learning new languages quickly and efficiently which I personally think will be an invaluable skill when moving into the professional IT landscape. Furthermore, I think an important skill to learn and refine is being able to communicate effectively between both team members undertaking a project and those who the project will be made for.
+      </p>
 
 
 
